// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyCanvas > should render empty state when there are no routes 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-l-stack"
  >
    <div
      class="pf-v6-l-stack__item pf-m-fill pf-topology-container"
    >
      <div
        class="pf-topology-content"
      >
        <div
          class="pf-v6-l-bullseye canvas-empty-state"
        >
          <div
            class="pf-v6-c-card"
            data-ouia-component-id="OUIA-Generated-Card-_r_0_"
            data-ouia-component-type="PF6/Card"
            data-ouia-safe="true"
            id=""
          >
            <div
              class="pf-v6-c-empty-state"
              data-testid="visualization-empty-state"
            >
              <div
                class="pf-v6-c-empty-state__content"
              >
                <div
                  class="pf-v6-c-empty-state__header"
                >
                  <div
                    class="pf-v6-c-empty-state__icon"
                  >
                    <svg
                      aria-hidden="true"
                      data-testid="cubes-icon"
                      role="img"
                    >
                      <path />
                    </svg>
                  </div>
                  <div
                    class="pf-v6-c-empty-state__title"
                  >
                    <h4
                      class="pf-v6-c-empty-state__title-text"
                    >
                      <p>
                        There are no routes defined
                      </p>
                    </h4>
                  </div>
                </div>
                <div
                  class="pf-v6-c-empty-state__body"
                >
                  <p>
                    You can create a new route using the New button
                  </p>
                </div>
                <div
                  class="pf-v6-c-empty-state__footer"
                >
                  <div
                    class="pf-v6-c-empty-state__actions"
                  >
                    <div
                      class="pf-v6-c-menu-toggle pf-m-full-width pf-m-split-button"
                    >
                      <button
                        aria-label="DSL list"
                        class="pf-v6-c-menu-toggle__button"
                        data-testid="dsl-list-btn"
                        id="dsl-list-btn"
                        type="button"
                      >
                        <div
                          title="Add a new Camel Route route"
                        >
                          <svg
                            data-testid="plus-icon"
                            role="img"
                          >
                            <path />
                          </svg>
                          <span
                            class="pf-v6-u-m-sm"
                          >
                            New
                          </span>
                        </div>
                      </button>
                      <button
                        aria-expanded="false"
                        class="pf-v6-c-menu-toggle__button"
                        data-ouia-component-id="OUIA-Generated-MenuToggle-_r_3_"
                        data-ouia-component-type="PF6/MenuToggle"
                        data-ouia-safe="true"
                        data-testid="viz-dsl-list-dropdown"
                        type="button"
                      >
                        <span
                          class="pf-v6-c-menu-toggle__controls"
                        >
                          <span
                            class="pf-v6-c-menu-toggle__toggle-icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              width="1em"
                            >
                              <svg
                                class="pf-v6-icon-default"
                                viewBox="0 0 320 512"
                              >
                                <path
                                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                />
                              </svg>
                              <svg
                                class="pf-v6-icon-rh-ui"
                                viewBox="0 0 32 32"
                              >
                                <path
                                  d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
                                />
                              </svg>
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyCanvas > should render empty state when there are routes but none are visible 1`] = `
<div>
  <div
    class="pf-v6-l-stack"
  >
    <div
      class="pf-v6-l-stack__item pf-m-fill pf-topology-container"
    >
      <div
        class="pf-topology-content"
      >
        <div
          class="pf-v6-l-bullseye canvas-empty-state"
        >
          <div
            class="pf-v6-c-card"
            data-ouia-component-id="OUIA-Generated-Card-_r_4_"
            data-ouia-component-type="PF6/Card"
            data-ouia-safe="true"
            id=""
          >
            <div
              class="pf-v6-c-empty-state"
              data-testid="visualization-empty-state"
            >
              <div
                class="pf-v6-c-empty-state__content"
              >
                <div
                  class="pf-v6-c-empty-state__header"
                >
                  <div
                    class="pf-v6-c-empty-state__icon"
                  >
                    <svg
                      aria-hidden="true"
                      data-testid="eye-slash-icon"
                      role="img"
                    >
                      <path />
                    </svg>
                  </div>
                  <div
                    class="pf-v6-c-empty-state__title"
                  >
                    <h4
                      class="pf-v6-c-empty-state__title-text"
                    >
                      <p>
                        There are no visible routes
                      </p>
                    </h4>
                  </div>
                </div>
                <div
                  class="pf-v6-c-empty-state__body"
                >
                  <button
                    class="pf-v6-c-button pf-m-control"
                    data-ouia-component-id="OUIA-Generated-Button-control-_r_5_"
                    data-ouia-component-type="PF6/Button"
                    data-ouia-safe="true"
                    data-testid="show-all-routes-button"
                    type="button"
                  >
                    <span
                      class="pf-v6-c-button__icon pf-m-start"
                    >
                      <svg
                        data-testid="eye-icon"
                        role="img"
                      >
                        <path />
                      </svg>
                    </span>
                    <span
                      class="pf-v6-c-button__text"
                    >
                      <span
                        class="pf-v6-u-m-sm"
                      >
                        Show all routes
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="pf-v6-c-empty-state__footer"
                >
                  <div
                    class="pf-v6-c-empty-state__actions"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
